Bug 20207, extra lines in textarea (r=buster)